--- a/SpecificationTest/appsettings.json
+++ b/SpecificationTest/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server = .; database=testdb,trusted_connection=true;encrypt=false"
+    "DefaultConnection": "server = .;database=testdb;trusted_connection=true;encrypt=false"
   }
 }
